--- a/src/index.css
+++ b/src/index.css
@@ -3,40 +3,57 @@
 body {
 	background-color: hsl(240deg 100% 98%);
 	margin: 0;
-}
 
-header {
-	align-items: center;
-	backdrop-filter: blur(8px);
-	background: hsl(240deg 100% 98% / 80%);
-	box-shadow: 2px 2px 4px hsl(240deg 9% 82%);
-	display: flex;
-	height: 64px;
-	justify-content: space-between;
-	overflow: hidden;
-	position: sticky;
-	top: 0;
-	white-space: nowrap;
-	width: 100%;
-
-	nav {
+	> header {
 		align-items: center;
+		backdrop-filter: blur(8px);
+		background: hsl(240deg 100% 98% / 80%);
+		box-shadow: 2px 2px 4px hsl(0deg 0% 0% / 15%), -2px -2px 4px hsl(0deg 0% 100%);
 		display: flex;
-		margin: 0 8px;
+		height: 64px;
+		justify-content: space-between;
+		overflow: hidden;
+		position: sticky;
+		top: 0;
+		white-space: nowrap;
+		width: 100%;
+
+		nav {
+			align-items: center;
+			display: flex;
+			margin: 0 8px;
+		}
+
+		h1 {
+			margin: 0;
+		}
+
+		img {
+			display: block;
+		}
+
+		a {
+			color: hsl(0deg 0% 0%);
+			font-family: Rubik, sans-serif;
+			text-decoration: none;
+		}
 	}
 
-	h1 {
-		margin: 0;
-	}
+	> main {
+		width: 90%;
+		margin: 16px auto;
+		display: grid;
+		grid: masonry / 2fr 4fr 2fr;
+		gap: 16px;
+		justify-content: center;
+		align-items: start;
 
-	img {
-		display: block;
-	}
-
-	a {
-		color: hsl(0deg 0% 0%);
-		font-family: Rubik, sans-serif;
-		text-decoration: none;
+		> * {
+			overflow: hidden;
+			border-radius: 16px;
+			box-shadow: 10px 10px 10px hsl(0deg 0% 0% / 15%),
+				-10px -10px 10px hsl(0deg 0% 100%);
+		}
 	}
 }
 
@@ -60,10 +77,35 @@ header {
 	}
 }
 
+#player {
+	grid-column: 1 / 3;
+
+	video {
+		display: block;
+		height: auto;
+		width: 100%;
+	}
+}
+
+#poster img {
+	display: block;
+	width: 100%;
+	height: auto;
+}
+
+#status {
+	border-radius: 14px;
+	background: hsl(110deg 90% 50%);
+	box-shadow: 11px 11px 50px #bdbdbc, -11px -11px 50px #fff;
+}
+
+#description {
+	grid-column: 2 / 3;
+}
+
 #search {
 	background: linear-gradient(145deg, hsl(0deg 0% 100% / 20%), hsl(240deg 15% 88% / 20%));
-	border-radius: 16px;
-	border-radius: 44px;
+	border-radius: 20px;
 	border: 0;
 	box-shadow: 2px 2px 4px hsl(240deg 9% 82%), -2px -2px 4px hsl(0deg 0% 100%);
 	height: 40px;
@@ -71,12 +113,12 @@ header {
 	padding: 0 16px;
 }
 
-#search-button {
-	display: none;
-}
-
 #search:focus {
 	background: linear-gradient(145deg, hsl(240deg 15% 88% / 40%), hsl(0deg 0% 100% / 40%));
+}
+
+#search-button {
+	display: none;
 }
 
 #logo {
@@ -100,7 +142,7 @@ header {
 }
 
 @media print {
-	header {
+	body > header {
 		display: none;
 	}
 
@@ -126,7 +168,7 @@ header {
 }
 
 @media screen and (max-device-width: 768px) {
-	header {
+	body > header {
 		height: 50px;
 	}
 
@@ -144,14 +186,13 @@ header {
 }
 
 @media screen and (max-device-width: 480px) {
-	header {
+	body > header {
 		bottom: 0;
-		box-shadow: -1px -1px 2px hsl(0deg 0% 100%);
 		justify-content: center;
 		position: fixed;
 		top: initial;
 
-		nav:first-child {
+		nav:nth-child(1) {
 			display: none;
 		}
 	}
