--- a/src/components/Header/index.module.css
+++ b/src/components/Header/index.module.css
@@ -44,7 +44,7 @@
 .subNameParent {
 	display: flex;
 	align-items: center;
-	font-family: Rubik, sans-serif;
+	font-family: rubik, sans-serif;
 	text-decoration: none;
 	color: hsl(0deg 0% 0%);
 	font-size: 10px;
@@ -71,31 +71,4 @@
 	height: 40px;
 	margin-right: 24px;
 	width: 1px;
-}
-
-.input {
-	background: linear-gradient(145deg, hsl(0deg 0% 100% / 20%), hsl(240deg 15% 88% / 20%));
-	border-radius: 20px;
-	border: 0;
-	box-shadow: 2px 2px 4px hsl(240deg 9% 82%), -2px -2px 4px hsl(0deg 0% 100%);
-	height: 40px;
-	margin: 0 16px;
-	padding: 0 16px;
-
-	@media screen and (max-device-width: 1024px) {
-		display: none;
-	}
-
-	@media screen and (max-device-width: 768px) {
-		display: initial;
-	}
-
-	@media screen and (max-device-width: 480px) {
-		display: none;
-	}
-}
-
-.input:focus {
-	outline: none;
-	background: linear-gradient(145deg, hsl(240deg 15% 88% / 40%), hsl(0deg 0% 100% / 40%));
 }
