--- a/src/components/NavBtn/index.module.css
+++ b/src/components/NavBtn/index.module.css
@@ -1,7 +1,7 @@
 .body {
 	display: flex;
 	align-items: center;
-	font-family: Rubik, sans-serif;
+	font-family: rubik, sans-serif;
 	text-decoration: none;
 	color: hsl(0deg 0% 0%);
 	background: linear-gradient(145deg, hsl(0deg 0% 100% / 20%), hsl(240deg 15% 88% / 20%));
