Bigger NavBts's for touchscreens

--- a/src/components/NavBtn/index.module.css
+++ b/src/components/NavBtn/index.module.css
@@ -46,4 +46,8 @@
 	height: 24px;
 	width: 24px;
 	padding: 8px;
+	@media screen and (max-device-width: 768px) {
+		height: 30px;
+		width: 30px;
+	}
 }
