--- a/src/components/Search/index.module.css
+++ b/src/components/Search/index.module.css
@@ -13,6 +13,8 @@
 
 	@media screen and (max-device-width: 768px) {
 		display: initial;
+		height: 46px;
+		border-radius: 23px;
 	}
 
 	@media screen and (max-device-width: 480px) {
