--- a/src/components/Header/index.module.css
+++ b/src/components/Header/index.module.css
@@ -19,14 +19,14 @@
 	}
 }
 
-.nav {
+.navRight {
 	display: flex;
 	align-items: center;
 	margin: 0 8px;
 }
 
-.nav_altHide {
-	composes: nav;
+.navLeft {
+	composes: navRight;
 	@media screen and (max-device-width: 768px) {
 		display: none;
 	}
@@ -40,22 +40,15 @@
 	margin: 0;
 }
 
-.subNameParent {
+.subName {
 	display: flex;
 	align-items: center;
 	font-family: rubik, sans-serif;
 	text-decoration: none;
 	color: hsl(0deg 0% 0%);
-	font-size: 10px;
 	margin: 0 4px;
-}
-
-.subName {
 	font-weight: 500;
-	display: flex;
-	align-items: center;
 	font-size: 24px;
-	margin: 0 4px;
 
 	@media screen and (max-device-width: 768px) {
 		display: initial;
