--- a/src/components/Search/index.module.css
+++ b/src/components/Search/index.module.css
@@ -1,10 +1,15 @@
 .body {
+	display: flex;
+	align-items: center;
+}
+
+.input {
 	background: linear-gradient(145deg, hsl(0deg 0% 100% / 20%), hsl(240deg 15% 88% / 20%));
 	border-radius: 20px;
 	border: 0;
 	box-shadow: 2px 2px 4px hsl(240deg 9% 82%), -2px -2px 4px hsl(0deg 0% 100%);
 	height: 40px;
-	margin: 0 16px;
+	margin: 0 4px;
 	padding: 0 16px;
 
 	@media screen and (max-device-width: 1024px) {
@@ -22,7 +27,7 @@
 	}
 }
 
-.body:focus {
+.input:focus {
 	outline: none;
 	background: linear-gradient(145deg, hsl(240deg 15% 88% / 40%), hsl(0deg 0% 100% / 40%));
 }
